Project handmade_finance {
  database_type: "PostgreSQL"
  Note: '''
    Product: HandmadeFinance. Schema shop_finance.
    Mock HTML interface; this schema matches the fields currently shown in the UI.

    Users: login email, phone number, avatar, role, active / disabled status.
    Income: product name, order code, EU region, quantity, unit price, Item/Discount/Subtotal/Ship/Tax,
    pre-tax amount (amount), tax rate, post-tax amount, sales channel, record status.
    Expenses: payee, domestic/international scope, payment method, pre-tax / tax rate / post-tax, status.
    Amounts are stored in USD. The UI converts to EUR for display — no separate currency datasets.
    No SKU inventory management or separate multi-line product orders.
    Income category seeds: Sales, Other Income.
    Expense category seeds: Raw Materials, Packaging, Shipping, Advertising,
    Service Fees, Employee Salaries, Electricity / Water / Internet, Premises Rent,
    Tools / Equipment, Other Expenses.
  '''
}

Enum user_role {
  ADMIN
  SHOP_OWNER
  EMPLOYEE
  VIEWER
}

Enum data_source {
  MANUAL
  EXCEL_IMPORT
}

Enum import_type {
  INCOME
  EXPENSE
}

Enum import_status {
  PENDING
  PROCESSING
  COMPLETED
  FAILED
}

Enum audit_action {
  INSERT
  UPDATE
  DELETE
  LOGIN
  EXPORT
  IMPORT
}

Enum sale_region {
  IN_EU
  OUTSIDE_EU
}

Enum origin_scope {
  DOMESTIC
  INTERNATIONAL
}

Enum sales_channel {
  ETSY_STORE
  WEBSITE_DIRECT
  INSTAGRAM_SHOP
  LOCAL_MARKET
  B2B_WHOLESALE
}

Enum payment_method {
  CREDIT_CARD
  BANK_TRANSFER
  CASH
  PAYPAL
}

Enum record_status {
  DRAFT
  PENDING
  COMPLETED
}

TableGroup users {
  app_users
}

TableGroup income {
  income_categories
  incomes
}

TableGroup expense {
  expense_categories
  expenses
}

TableGroup shared {
  import_batches
  attachments
  audit_logs
}

Table app_users [note: "Users; 4 roles. UI: avatar, phone number, active status, last activity time."] {
  id bigint [pk, increment]
  username varchar(100) [not null]
  email varchar(255)
  password_hash text [not null]
  full_name varchar(255) [not null]
  phone varchar(30)
  avatar_url text
  timezone varchar(64) [not null, default: "Asia/Ho_Chi_Minh"]
  role user_role [not null, default: "EMPLOYEE"]
  is_active boolean [not null, default: true]
  last_login_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
}

Table import_batches [note: "Tracks each Excel import run from the Excel Data Import page"] {
  id bigint [pk, increment]
  import_type import_type [not null]
  original_file_name varchar(500) [not null]
  stored_file_path text
  status import_status [not null, default: "PENDING"]
  total_rows integer [not null, default: 0]
  success_rows integer [not null, default: 0]
  failed_rows integer [not null, default: 0]
  error_details jsonb
  imported_by bigint
  created_at timestamptz [not null, default: `now()`]
  completed_at timestamptz
}

Table income_categories [note: "Income classification — Income Category badge in the UI"] {
  id bigint [pk, increment]
  name varchar(150) [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
  created_by bigint
}

Table incomes [note: "amount = pre-tax amount in list/form. amount_after_tax is calculated from tax rate. Order details: code, EU, quantity, fees. Detail modal: sales channel, status."] {
  id bigint [pk, increment]
  income_date date [not null]
  description text [not null]
  income_category_id bigint [not null]
  amount numeric(18,2) [not null]
  currency_code varchar(3) [not null, default: "USD", note: "V1 supports USD only; EUR is a UI display conversion"]
  reference_code varchar(150)
  order_code varchar(150)
  sale_region sale_region
  sales_channel sales_channel
  record_status record_status [not null, default: "COMPLETED"]
  product_qty integer
  unit_price numeric(18,2)
  item_total numeric(18,2)
  discount_amount numeric(18,2) [not null, default: 0]
  discount_code varchar(80)
  subtotal numeric(18,2)
  shipping_amount numeric(18,2) [not null, default: 0]
  tax_amount numeric(18,2) [not null, default: 0]
  tax_percent numeric(6,2) [not null, default: 0]
  amount_after_tax numeric(18,2) [not null, default: 0]
  source data_source [not null, default: "MANUAL"]
  import_batch_id bigint
  note text
  created_by bigint
  updated_by bigint
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
  deleted_by bigint
}

Table expense_categories [note: "Expense classification — Expense Category badge in the UI"] {
  id bigint [pk, increment]
  name varchar(150) [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
  created_by bigint
}

Table expenses [note: "amount = pre-tax amount. Detail modal: payment method, record status."] {
  id bigint [pk, increment]
  expense_date date [not null]
  description text [not null]
  expense_category_id bigint [not null]
  amount numeric(18,2) [not null]
  currency_code varchar(3) [not null, default: "USD", note: "V1 supports USD only; EUR is a UI display conversion"]
  payee varchar(255)
  origin_scope origin_scope [not null, default: "DOMESTIC"]
  payment_method payment_method
  record_status record_status [not null, default: "COMPLETED"]
  tax_percent numeric(6,2) [not null, default: 0]
  amount_after_tax numeric(18,2) [not null]
  source data_source [not null, default: "MANUAL"]
  import_batch_id bigint
  note text
  created_by bigint
  updated_by bigint
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
  deleted_by bigint
}

Table attachments [note: "Attachment metadata shown in the detail modal; file stored outside Postgres. Exactly one of income_id / expense_id"] {
  id bigint [pk, increment]
  income_id bigint
  expense_id bigint
  original_name varchar(500) [not null]
  storage_path text [not null]
  mime_type varchar(150)
  file_size_bytes bigint
  uploaded_by bigint
  uploaded_at timestamptz [not null, default: `now()`]
}

Table audit_logs [note: "Activity log in the UI: module, description, IP. INSERT/UPDATE/DELETE via trigger; LOGIN/EXPORT/IMPORT written by the app."] {
  id bigint [pk, increment]
  table_name varchar(100)
  record_id bigint
  action audit_action [not null]
  module varchar(100)
  detail text
  actor_user_id bigint
  old_data jsonb
  new_data jsonb
  changed_at timestamptz [not null, default: `now()`]
  request_id uuid
  ip_address varchar
}

Ref: import_batches.imported_by > app_users.id [delete: set null]
Ref: income_categories.created_by > app_users.id [delete: set null]
Ref: incomes.income_category_id > income_categories.id
Ref: incomes.import_batch_id > import_batches.id [delete: set null]
Ref: incomes.created_by > app_users.id [delete: set null]
Ref: incomes.updated_by > app_users.id [delete: set null]
Ref: incomes.deleted_by > app_users.id [delete: set null]
Ref: expense_categories.created_by > app_users.id [delete: set null]
Ref: expenses.expense_category_id > expense_categories.id
Ref: expenses.import_batch_id > import_batches.id [delete: set null]
Ref: expenses.created_by > app_users.id [delete: set null]
Ref: expenses.updated_by > app_users.id [delete: set null]
Ref: expenses.deleted_by > app_users.id [delete: set null]
Ref: attachments.income_id > incomes.id [delete: cascade]
Ref: attachments.expense_id > expenses.id [delete: cascade]
Ref: attachments.uploaded_by > app_users.id [delete: set null]
Ref: audit_logs.actor_user_id > app_users.id [delete: set null]
